[project]
name = "bmpv"
version = "0.1.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
license = "GPL-3.0-or-later"
keypywords = ["version", "bump", "bumpversion", "versioning", "automation", "tool", "cli"]

[project.urls]
Homepage = "https://github.com/maciakl/bmpv"
Issues = "https://github.com/maciakl/bmpv/issues"

[project.scripts]
bmpv = "bmpv:main"
